--- a/package.json
+++ b/package.json
@@ -20,9 +20,12 @@
     "ejs": "^4.0.1",
     "exceljs": "^4.4.0",
     "express": "^5.2.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.19.0",
+    "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.3",
     "jsqr": "^1.4.0",
+    "lusca": "^1.7.0",
     "multer": "^2.0.2",
     "mysql2": "^3.16.2",
     "openai": "^6.17.0",
