--- a/package.json
+++ b/package.json
@@ -46,7 +46,8 @@
     "mysql2": "^3.16.2",
     "node-cron": "^4.2.1",
     "openai": "^6.17.0",
-    "socket.io": "^4.8.3"
+    "socket.io": "^4.8.3",
+    "ssh2-sftp-client": "^12.0.1"
   },
   "devDependencies": {
     "tailwindcss": "^4.1.18"
