--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "description": "",
   "dependencies": {
     "@google-cloud/vision": "^5.3.4",
+    "@google/generative-ai": "^0.24.1",
     "@line/bot-sdk": "^10.6.0",
     "axios": "^1.13.4",
     "bcrypt": "^5.1.1",
