--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "axios": "^1.13.4",
     "bcrypt": "^5.1.1",
     "bcryptjs": "^3.0.3",
+    "bullmq": "^5.67.2",
     "canvas": "^3.2.1",
     "cors": "^2.8.6",
     "dotenv": "^17.2.3",
@@ -40,6 +41,7 @@
     "express-ejs-layouts": "^2.5.1",
     "express-session": "^1.19.0",
     "helmet": "^8.1.0",
+    "ioredis": "^5.9.2",
     "jsonwebtoken": "^9.0.3",
     "jsqr": "^1.4.0",
     "lusca": "^1.7.0",
