--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "jsonwebtoken": "^9.0.3",
     "jsqr": "^1.4.0",
     "lusca": "^1.7.0",
+    "moment": "^2.29.4",
     "multer": "^2.0.2",
     "mysql2": "^3.16.2",
     "node-cron": "^4.2.1",
