--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "multer": "^2.0.2",
     "mysql2": "^3.16.2",
     "node-cron": "^4.2.1",
+    "nodemailer": "^8.0.1",
     "omise": "^1.1.0",
     "openai": "^6.17.0",
     "socket.io": "^4.8.3",
